# chat_Novosoft

./: CMakeLists.txt  readme.md
scr/: main.cpp
scr/chatLib/: Chat.cpp  Chat.h
